[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/arcade_64.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/arcade_32.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/arcade_128.tres" type="DynamicFont" id=3]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=4]
[ext_resource path="res://scenes/HighScoreListItem.tscn" type="PackedScene" id=5]

[node name="HUD" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
HighScoreListItem = ExtResource( 5 )

[node name="MarginContainer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 48.0
margin_top = 48.0
margin_right = -48.0
margin_bottom = -48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="MarginContainer"]
anchor_right = 1.0
margin_bottom = 129.0
custom_fonts/font = ExtResource( 3 )
text = "SNAKE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefaultInterface" type="Control" parent="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/DefaultInterface"]
anchor_right = 1.0
margin_top = 112.0
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EasyButton" type="Button" parent="MarginContainer/DefaultInterface/HBoxContainer"]
margin_right = 160.0
margin_bottom = 39.0
grow_horizontal = 2
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Easy"

[node name="NormalButton" type="Button" parent="MarginContainer/DefaultInterface/HBoxContainer"]
margin_left = 192.0
margin_right = 352.0
margin_bottom = 39.0
grow_horizontal = 2
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Normal"

[node name="HardButton" type="Button" parent="MarginContainer/DefaultInterface/HBoxContainer"]
margin_left = 384.0
margin_right = 544.0
margin_bottom = 39.0
grow_horizontal = 2
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Hard"

[node name="HighScores" type="Label" parent="MarginContainer/DefaultInterface"]
anchor_right = 1.0
margin_top = 192.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 1 )
text = "High Scores"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreList" type="VBoxContainer" parent="MarginContainer/DefaultInterface"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 80.0
margin_top = 256.0
margin_right = -80.0
custom_constants/separation = -8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerScoreListItem" parent="MarginContainer/DefaultInterface/HighScoreList" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 384.0
margin_bottom = 33.0

[node name="DashListItem" parent="MarginContainer/DefaultInterface/HighScoreList" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 25.0
margin_right = 384.0
margin_bottom = 58.0

[node name="HighScoreInput" type="Control" parent="MarginContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 112.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="Label" parent="MarginContainer/HighScoreInput"]
anchor_right = 1.0
custom_fonts/font = ExtResource( 2 )
text = "You set a new high score! Enter a 3 letter name to save your score."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputLineEdit" type="LineEdit" parent="MarginContainer/HighScoreInput"]
anchor_left = 0.5
anchor_right = 0.5
margin_top = 80.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 2 )
align = 1
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreButtonsContainer" type="HBoxContainer" parent="MarginContainer/HighScoreInput"]
anchor_right = 1.0
margin_left = 80.0
margin_top = 144.0
margin_right = -80.0
custom_constants/separation = 48
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubmitButton" type="Button" parent="MarginContainer/HighScoreInput/HighScoreButtonsContainer"]
margin_right = 168.0
margin_bottom = 39.0
grow_horizontal = 2
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Submit"

[node name="SkipButton" type="Button" parent="MarginContainer/HighScoreInput/HighScoreButtonsContainer"]
margin_left = 216.0
margin_right = 384.0
margin_bottom = 39.0
grow_horizontal = 2
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Skip"

[node name="ErrorMessage" type="Label" parent="MarginContainer/HighScoreInput"]
anchor_right = 1.0
margin_top = 200.0
custom_fonts/font = ExtResource( 2 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MarginContainer/DefaultInterface/HBoxContainer/EasyButton" to="." method="_on_EasyButton_pressed"]
[connection signal="pressed" from="MarginContainer/DefaultInterface/HBoxContainer/NormalButton" to="." method="_on_NormalButton_pressed"]
[connection signal="pressed" from="MarginContainer/DefaultInterface/HBoxContainer/HardButton" to="." method="_on_HardButton_pressed"]
[connection signal="text_entered" from="MarginContainer/HighScoreInput/InputLineEdit" to="." method="_submit_high_score"]
[connection signal="pressed" from="MarginContainer/HighScoreInput/HighScoreButtonsContainer/SubmitButton" to="." method="_submit_high_score"]
[connection signal="pressed" from="MarginContainer/HighScoreInput/HighScoreButtonsContainer/SkipButton" to="." method="_on_SkipButton_pressed"]
